sea-query-derive/tests/compile-fail/empty_list_iden.stderr
error: Must one of the following attributes: `flatten`, `rename` or `method`
 --> $DIR/empty_list_iden.rs:8:7
  |
8 |     #[iden()]
  |       ^^^^^^
